--- a/templates/base.html
+++ b/templates/base.html
@@ -22,10 +22,25 @@
                     <a class="nav-link" href="{{url_for('list_devices')}}">List Devices</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarLightDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">Device Actions</a>
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarLightDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">System Wide</a>
                     <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarLightDropdownMenuLink">
-                    <li><a class="dropdown-item" href="{{url_for('show_device_summary')}}">Show device summary</a></li>
-                    <li><a class="dropdown-item" href="{{url_for('show_device_usage')}}">Show device data usage</a></li>
+                        <li><a class="dropdown-item" href="{{url_for('all_time_stats')}}">All time</a></li>
+                        <li><a class="dropdown-item" href="{{url_for('system_wide_daily_usage')}}">Daily usage</a></li>
+                    </ul>
+                </li>                
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarLightDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">Top 20</a>
+                    <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarLightDropdownMenuLink">
+                        <li><a class="dropdown-item" href="{{url_for('top_20day')}}">Single day usage</a></li>
+                        <li><a class="dropdown-item" href="{{url_for('top_20alltime')}}">All time usage</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarLightDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">Device Stats</a>
+                    <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarLightDropdownMenuLink">
+                        <li><a class="dropdown-item" href="{{url_for('show_device_summary')}}">Show device summary</a></li>
+                        <li><a class="dropdown-item" href="{{url_for('show_device_usage')}}">Show device data usage</a></li>
                     </ul>
                 </li>
                 </ul>
