--- a/templates/show_device_usage.html
+++ b/templates/show_device_usage.html
@@ -19,6 +19,13 @@
       display: table;
       clear: both;
     }
+    #minDataUsageInputWrapper {
+      color: #3b3b3b77;
+    }
+    #minDataUsageInputWrapper input {
+      background-color: #3b3b3b77;
+      border-color: #d0d0d0;
+    }
   </style>
 
 </head>
@@ -29,7 +36,6 @@
         <div class="column left" id="picker">
             <form>
                 <h4>Select a Cradlepoint:</h4>
-                <!-- <label for="CP_Picker">Select a Cradlepoint:</label> -->
                 <select id="CP_Picker" name="CP" class="form-select" aria-label="Default select"> <!-- onchange="showInfo();" -->
                 {% for device in CP_LIST%}
                 <option value="{{device}}">{{device}}</option>
@@ -38,15 +44,24 @@
             </form>
             <br>
             <form>
-                <strong>Sort by:</strong>
-                <label>Date&nbsp;</label><input type="radio" name="sort_by" value="Date" checked> 
-                <label>Usage&nbsp;</label><input type="radio" name="sort_by" value="Usage">
-                &nbsp;
-                <strong>Sort order:</strong>
-                <label>Ascending&nbsp;</label><input type="radio" name="sort_order" value="ASC" checked> 
-                <label>Decending&nbsp;</label><input type="radio" name="sort_order" value="DESC">
+              <strong>Sort by:</strong>
+              <label>Date&nbsp;</label><input type="radio" name="sort_by" value="Date" checked> 
+              <label>Usage&nbsp;</label><input type="radio" name="sort_by" value="Usage">
+              &nbsp;
+              <strong>Sort order:</strong>
+              <label>Ascending&nbsp;</label><input type="radio" name="sort_order" value="ASC"> 
+              <label>Decending&nbsp;</label><input type="radio" name="sort_order" value="DESC" checked>
             </form>
-        </div>
+            <br>
+            <div id="minDataUsageInputWrapper">
+              <label for="minDataUsageInput">Minimum Data Usage (MB):</label>
+              <input type="number" id="minDataUsageInput" name="minDataUsageInput" min="0" disabled>
+            </div>
+            <br>
+            <label for="limitInput">Limit the number of responses:</label>
+            <input type="number" id="limitInput" name="limitInput" min="1" max="9999" value="9999"><br><br>
+            <button class="btn btn-outline-secondary" type="submit" id="executeButton">Show Usage</button>
+          </div>
 
         <div class="column right" id="device_usage">
         <!-- Device info will get stuffed in here after a device selection is made -->
@@ -56,37 +71,74 @@
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script type="text/javascript">
-     var option1, option2;
 
-    function getSelectedOptions() {
-        option1 = document.querySelector('input[name="sort_by"]:checked');
-        option2 = document.querySelector('input[name="sort_order"]:checked');
-    }    
+    var option1, option2, response_limit;
 
-    document.addEventListener('DOMContentLoaded', function() {
-        document.getElementById('CP_Picker').addEventListener('change', function() {
-            var item = this.value;
- 
-            getSelectedOptions()
+      // Function to show/hide the minDataUsageInput based on the "Usage" radio button
+  function toggleMinDataUsageInput() {
+    var minDataUsageInput = document.getElementById('minDataUsageInput');
+    var minDataUsageLabel = document.querySelector('label[for="minDataUsageInput"]');
 
-            //alert("Selected options:\nsort_by: " + option1.value + "\nsort_order: " + option2.value);
+    console.log("option1.value:", option1 && option1.value); // Check if option1 is defined before accessing its value
+
+    if (option1 && option1.value === 'Usage') { // Make sure option1 is defined before accessing its value
+      minDataUsageInput.disabled = false;
+      console.log("if option1 = Usage minDataUsageInput.disabled:", minDataUsageInput.disabled);
+      minDataUsageLabel.style.color = '#000';
+      minDataUsageInput.style.backgroundColor = '#ffffff';
+      console.log("minDataUsageLabel.style.color:", minDataUsageLabel.style.color);
+    } else {
+      minDataUsageInput.disabled = true;
+      console.log("else minDataUsageInput.disabled:", minDataUsageInput.disabled);
+      minDataUsageLabel.style.color = '#3b3b3b77';
+      minDataUsageInput.style.backgroundColor = '#3b3b3b77';
+      console.log("minDataUsageLabel.style.color:", minDataUsageLabel.style.color);
+    }
+  }
+
+    function executeReport() {
+      var selectedCP = document.getElementById("CP_Picker").value;
+      getSelectedOptions();
+
+      //alert("Selected options:\nsort_by: " + option1.value + "\nsort_order: " + option2.value);
             
-            axios.get('/device_usage', {
-            params: {
-                cp: item,
-                sort_by_value: option1.value,
-                sort_order_value: option2.value
-            }
-            })
-            .then(function (response) {
-                document.getElementById("device_usage").innerHTML = response.data;
-            })
-            .catch(function (error) {
-                console.log(error);
-            });
-        });
+      axios.get('/device_usage', {
+      params: {
+          cp: selectedCP,
+          sort_by_value: option1.value,
+          sort_order_value: option2.value,
+          response_limit: response_limit,
+          min_data_usage: option1.value === 'Usage' ? document.getElementById('minDataUsageInput').value : 0
+      }
+      })
+      .then(function (response) {
+        document.getElementById("device_usage").innerHTML = response.data;
+      })
+      .catch(function (error) {
+        console.log(error);
+      });
+    }
+    function getSelectedOptions() {
+      option1 = document.querySelector('input[name="sort_by"]:checked');
+      option2 = document.querySelector('input[name="sort_order"]:checked');
+      response_limit = document.getElementById("limitInput").value;
+    }
+
+    //add event listener to the Execute button
+    document.getElementById('executeButton').addEventListener('click', executeReport);
+    
+    // Add event listener to the radio buttons to toggle the minDataUsageInput visibility
+    var sortRadioButtons = document.querySelectorAll('input[name="sort_by"]');
+    sortRadioButtons.forEach(function (radioButton) {
+      radioButton.addEventListener('change', function() {
+        getSelectedOptions();
+        toggleMinDataUsageInput();
+      });
     });
 
-    </script>
+    // Initially, disable the minDataUsageInput since "Date" is checked by default
+    getSelectedOptions();
+    toggleMinDataUsageInput();
+  </script>
    
 {% endblock %}
