--- a/templates/base.html
+++ b/templates/base.html
@@ -26,6 +26,7 @@
                     <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarLightDropdownMenuLink">
                         <li><a class="dropdown-item" href="{{url_for('all_time_stats')}}">All time</a></li>
                         <li><a class="dropdown-item" href="{{url_for('system_wide_daily_usage')}}">Daily usage</a></li>
+                        <li><a class="dropdown-item" href="{{url_for('all_devices_by_day')}}">All devices by day</a></li>
                     </ul>
                 </li>                
                 </li>
